# smpbkmrk

./: .gitignore  CMakeLists.txt  Dolist.txt  Struct.drawio  example.cpp
.github/: CODEOWNERS
include/: application.cpp  application.h  dcontrol.h  smpbkmrk.cpp  smpbkmrk.h
include/dexample/: example.cpp
include/dgui/: dgui.cpp  dgui.h  dgui.hpp
include/dscreen/: dscreen.cpp  dscreen.h
include/dsocket/: dsocket.cpp  dsocket.h
include/dtool/: dbasic.h  dio.h  dlogger.cpp  dlogger.h  dpath.cpp  dpath.h  dstring.cpp  dstring.h
src/: .cpp  main.cpp  mainlog.txt  smpbkmrk.hpp  test.cpp  test2.cpp  test3.cpp
